bin_PROGRAMS = dsmccgen

dsmccgen_SOURCES = main.c dsmcc.c settopbox.c servicegroup.c sdvserver.c
dsmccgen_LDADD=
#dsmccgen_LDFLAGS=-lglib-2.0 -lpthread
dsmccgen_LDFLAGS=-lpthread
#dsmccgen_CFLAGS=-v -I/usr/include/glib-2.0/glib
#dsmccgen_CFLAGS=-v -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -pthread
dsmccgen_CFLAGS=-v -pthread -O0

